--- a/style.css
+++ b/style.css
@@ -5,33 +5,181 @@
 }
 
 body {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: rgb(34, 34, 34);
+  line-height: 1.7;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  line-height: 1.3;
+  transform: scale(1, 1.3);
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+}
+
+ul span {
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: grey;
+  font-size: 14px;
+}
+
+button {
+  border: none;
+  background: hsl(207, 23%, 53%);
+  color: white;
+  padding: 9px 10px;
+  border-radius: 3px;
+  text-transform: uppercase;
+  font-size: 11px;
+  letter-spacing: 0.4px;
+  font-weight: bold;
+}
+
+figure {
+  margin-bottom: 30px;
+}
+
+figcaption {
+  color: rgb(126, 126, 126);
+  font-size: 13px;
+  position: relative;
+  left: -20%;
+  line-height: 1.4;
+  margin-top: 4px;
+  width: 140%;
+}
+
+figcaption span {
+  font-size: 11px;
+  color: rgb(145, 145, 145);
+  letter-spacing: 0.8px;
+  padding-left: 10px;
+}
+
+.container {
+  width: 50vw;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.img-wrapper {
+  position: relative;
+  left: -20%;
+  width: 80vw;
 }
 
 .header-nav {
-  height: 30px;
+  height: 43px;
   width: 100vw;
   padding-left: 20px;
-  padding-right: 20px;
+  padding-right: 30px;
   display: flex;
   align-items: center;
-  background: rgb(226, 226, 226);
+  justify-content: space-between;
+  background: rgb(255, 255, 255);
+  border-bottom: 1px solid rgb(240, 240, 240);
+  margin-bottom: 30px;
+}
+
+.header-nav * {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.header-nav .glass {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.header-nav span {
+  text-transform: uppercase;
+  font-family: Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: -1px;
+}
+
+.nytlogo {
+  margin-left: auto;
+}
+
+.header-nav button:nth-of-type(1) {
+  margin-left: auto;
 }
 
 .hamburger,
 .hamburger::before,
 .hamburger::after {
-  content: '';
+  content: "";
   display: block;
-  width: 1.4em;
+  width: 14px;
   background: #000;
-  height: 3px;
+  height: 2px;
+  border-radius: 5px;
 }
 
 .hamburger::before {
-  transform: translateY(-7px);
+  transform: translateY(-4px);
 }
 
 .hamburger::after {
-  transform: translateY(4px);
+  transform: translateY(2px);
+}
+
+.main-title {
+  font-style: italic;
+  margin-bottom: 30px;
+  max-width: 50vw;
+  font-size: 30px;
+}
+
+.article-author {
+  font-weight: bold;
+  font-family: Helvetica, sans-serif;
+  font-size: 15px;
+}
+
+.section-inflation {
+  width: 140%;
+  height: 800px;
+  transform: translateX(-10%);
+  background-image: url("/assets/inflation-720.png");
+  background-color: aqua;
+  background-position: 0 140px;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  margin-bottom: 250px;
+}
+
+.section-inflation .row {
+  display: flex;
+  line-height: 1.3;
+  font-family: Helvetica, sans-serif;
+  font-size: 12px;
+}
+.section-inflation .row:nth-of-type(1) {
+  position: relative;
+  top: 125px;
+  background: greenyellow;
+}
+
+.section-inflation .row:nth-of-type(2) {
+  position: relative;
+  top: 280px;
+}
+
+.section-inflation p:last-of-type {
+  position: relative;
+  top: 325px;
 }
