--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ figcaption span {
 }
 
 .container {
-  width: 30%;
+  width: 600px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -100,6 +100,19 @@ figcaption span {
 .header-nav .glass {
   margin-left: 20px;
   margin-right: 20px;
+  display: flex;
+}
+
+.nytlogo {
+  display: flex;
+}
+
+.svg-search {
+  width: 16px;
+}
+
+.nyt {
+  width: 184px;
 }
 
 .header-nav span {
@@ -214,4 +227,84 @@ figcaption span {
 .inflation-subheadings {
   font-weight: 600;
   padding-right: 13px;
+}
+
+.yt-embed {
+  padding: 35px 0;
+}
+
+.article-footer {
+  margin-top: 30px;
+}
+
+.related-section {
+  display: flex;
+  height: 1000px;
+  min-width: 90vw;
+  margin-top: 30px;
+}
+
+.related-left {
+  width: 69%;
+  border-top: 1px solid black;
+}
+
+.related-right {
+  width: 31%;
+  margin-left: 35px;
+  border-top: 1px solid black;
+}
+
+.grid {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+  grid-gap: 15px;
+  grid-row-gap: 35px;
+  margin-bottom: 30px;
+  font-size: 18px;
+}
+
+.grid-item {
+  min-width: 0;
+}
+
+.grid-item img {
+  max-width: 100%;
+}
+
+.related-left > p {
+  padding: 25px 0 15px 0;
+  font-weight: 600;
+  font-size: 17px;
+  font-family: Helvetica, sans-serif;
+}
+
+.e-picks {
+  padding: 25px 0 15px 0;
+  font-weight: 600;
+  border-top: 1px solid black;
+  font-size: 17px;
+  font-family: Helvetica, sans-serif;
+}
+
+.related-right ul {
+  list-style-type: none;
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+}
+
+.popular-item {
+  padding: 15px 0;
+  border-top: 1px solid lightgrey;
+  width: 100%;
+}
+
+.related-right > p {
+  font-weight: bold;
+  padding: 25px 0 15px 0;
+  font-family: Helvetica, sans-serif;
 }
