--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ ul span {
 
 button {
   border: none;
-  background: hsl(207, 23%, 53%);
+  background: hsl(206, 22%, 49%);
   color: white;
   padding: 9px 10px;
   border-radius: 3px;
@@ -235,12 +235,24 @@ figcaption span {
 
 .article-footer {
   margin-top: 30px;
+  font-size: 12px;
+  margin-bottom: 75px;
+  color: rgb(155, 153, 153);
+}
+
+.article-footer-row {
+  margin-top: 20px;
+}
+
+.article-footer-row button {
+  width: 50%;
+  text-transform: uppercase;
 }
 
 .related-section {
   display: flex;
   height: 1000px;
-  min-width: 90vw;
+  min-width: 80vw;
   margin-top: 30px;
 }
 
@@ -251,7 +263,7 @@ figcaption span {
 
 .related-right {
   width: 31%;
-  margin-left: 35px;
+  margin-left: 30px;
   border-top: 1px solid black;
 }
 
@@ -263,7 +275,7 @@ figcaption span {
   grid-gap: 15px;
   grid-row-gap: 35px;
   margin-bottom: 30px;
-  font-size: 18px;
+  font-size: 17px;
 }
 
 .grid-item {
@@ -291,10 +303,11 @@ figcaption span {
 
 .related-right ul {
   list-style-type: none;
-  font-size: 18px;
+  font-size: 17px;
   display: flex;
   flex-direction: column;
   padding: 0;
+  line-height: 1.5;
 }
 
 .popular-item {
@@ -310,19 +323,59 @@ figcaption span {
 }
 
 footer {
-  padding-top: 35px;
+  padding-top: 60px;
   width: 90vw;
   margin-left: auto;
   margin-right: auto;
 }
 
+.divider {
+  width: 90vw;
+  height: 4px;
+  background: white;
+  border-top: 2px solid rgb(226, 226, 226);
+  border-bottom: 1px solid rgb(226, 226, 226);
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.footer-head {
+  display: flex;
+  justify-content: space-between;
+}
+
+.home-link {
+  font-size: 11px;
+  font-family: Helvetica, sans-serif;
+  align-self: flex-end;
+}
+
+.home-link a {
+  color: rgb(87, 132, 175);
+  text-decoration: none;
+}
+
 .links-container {
   display: flex;
+  font-family: Helvetica, sans-serif;
+  padding-top: 10px;
+  font-size: 14px;
+  width: 100%;
+  justify-content: space-between;
+  padding-bottom: 40px;
 }
 
 .links-container span {
-  margin: 5px;
+  margin: 0;
   color: rgb(32, 32, 32);
+  font-weight: 600;
+  font-size: 15px;
+  text-transform: uppercase;
+  padding-bottom: 7px;
+}
+
+.links-container svg {
+  margin-right: 4px;
 }
 
 .links-container .f-col {
@@ -331,6 +384,39 @@ footer {
   align-items: flex-start;
 }
 
-.popular-item {
+.links-container div:last-of-type {
+  padding-left: 13px;
+  border-left: 1px solid rgb(226, 226, 226);
+}
+
+.f-bord {
+  height: 1px;
+  background: rgb(226, 226, 226);
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.links-container div:last-of-type li:nth-last-of-type(1n + 6) {
+  padding-bottom: 3px;
+  font-size: 14px;
+  font-weight: 800;
+}
+
+.links-container div:last-of-type li:nth-of-type(1n + 5) {
+  font-size: 12px;
+  padding: 3px 0;
+}
+
+.links-container div:last-of-type li:nth-child(9) {
+  padding-top: 13px;
+}
+
+.links-container div:last-of-type li:nth-child(8) {
+  padding-bottom: 10px;
+}
+
+.popular-item,
+.f-list-item,
+.links-container ul {
   width: 100%;
 }
